@@ -1,3 +1,7 @@
+Tue Apr  8 18:52:36 CEST 2008 Daniel Veillard <daniel@veillard.com>
+
+	* libexslt/date.c: new version of patch from Peter Pawlowski
+
 Tue Apr  8 10:19:01 CEST 2008 Daniel Veillard <daniel@veillard.com>
 
 	* python/generator.py: fix an infinite loop bug
